k8s/core/gno-land/ingress/gnoland-ingress.yaml
kind: Middleware
apiVersion: traefik.io/v1alpha1
metadata:
  name: gno-stripprefix
  namespace: gno
spec:
  stripPrefix:
    prefixes:
      - /gno
---
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: gnoland-ingress
  namespace: gno
spec:
  entryPoints:
    - web
  routes:
  # - match: Host(`your.example.com`) && PathPrefix(`/notls`)
  - match: PathPrefix(`/gno`)
    kind: Rule
    services:
    - name: gnoland
      namespace: gno
      port: rpc-public
    middlewares:
    - name: gno-stripprefix
      namespace: gno
